[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ag-survival-sim"
version = "0.1.0"
description = "Agricultural survival benchmark with paired scenario evaluation and selective-observation hooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Andrew Watson" }
]
dependencies = []

[project.scripts]
ag-survival-demo = "ag_survival_sim.cli:main"
ag-survival-dssat-suite = "ag_survival_sim.cli:run_dssat_suite_cli"
ag-survival-iowa-maize = "ag_survival_sim.cli:run_iowa_maize_demo_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires a real local DSSAT installation",
]

[tool.setuptools.packages.find]
include = ["ag_survival_sim*"]
