[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ag-survival-sim"
version = "0.1.0"
description = "Agricultural survival benchmark with paired scenario evaluation and selective-observation hooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Andrew Watson" }
]
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.8",
]

[project.scripts]
ag-survival-demo = "ag_survival_sim.cli:main"
ag-survival-dssat-suite = "ag_survival_sim.cli:run_dssat_suite_cli"
ag-survival-iowa-maize = "ag_survival_sim.cli:run_iowa_maize_demo_cli"
ag-survival-dssat-benchmark = "ag_survival_sim.cli:run_iowa_maize_demo_cli"
ag-survival-dssat-catalog = "ag_survival_sim.cli:run_dssat_catalog_cli"
ag-survival-dssat-all-crops = "ag_survival_sim.cli:run_dssat_all_crops_cli"
ag-survival-portfolio-benchmark = "ag_survival_sim.cli:run_portfolio_benchmark_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "integration: requires a real local DSSAT installation",
]

[tool.setuptools.packages.find]
include = ["ag_survival_sim*"]
